feat: add ethereum client endpoints
